Fix T46415: empty node group in GLSL shader has incorrect socket type conversion.